fixing the frontend problem on firefox

--- a/greenit_website/static/styles.css
+++ b/greenit_website/static/styles.css
@@ -13,6 +13,7 @@ body {
     display: block;
     background-color: #A1CBF7;
     margin-top: -40px;
+    height: 10%;
 }
 
 .topbanner {
@@ -30,7 +31,6 @@ body {
 }
 
 .topbannertext {
-    display: inline;
     text-align: center;
     width: 80%;
 }
